base/001-analytics/fuse-001-analytics-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: analytics
  name: analytics
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: analytics
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: analytics
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-analytics:development"
          name: analytics
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
